# dtee_llm

./: README.md
src/: CMakeLists.txt  llama.edl  z_enclave_env_provider.cpp
src/enclave/: CMakeLists.txt
src/enclave/enclave_lib/: CMakeLists.txt
src/enclave/insecure/: file_stub.cpp  file_stub.h
src/enclave/secure/: CMakeLists.txt  ecdh.cpp  llm.cpp  llm.h
src/host/: CMakeLists.txt
src/host/insecure/: CMakeLists.txt  chat.cpp  compute_node.cpp  file_stub.cpp
src/host/secure/: CMakeLists.txt  llm.cpp
